<resources>
    <string name="app_name">Quick English Speaking</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="other_apps">Other Apps</string>
    <string name="share_link">Share Link</string>
    <string name="feedback">Feedback</string>
    <string name="developer">Developer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="quick_english_speaking">Quick English Speaking</string>


</resources>