<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="16dp"
        android:onClick="ClickLogo"
        android:src="@drawable/icon" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Quick English Speaking"
        android:textAlignment="center"
        android:textColor="#636363"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:onClick="ClickHome"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#878787"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:textStyle="bold"
            android:text="Home"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_home"
            android:layout_marginRight="48dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#636363" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#767676"
        android:textStyle="bold"
        android:text="Communication"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp" />

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:onClick="ClickRateThisApp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#878787"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:textStyle="bold"
            android:text="@string/rate_this_app"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:src="@drawable/rate"
            android:layout_marginRight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:onClick="ClickOtherApps"
        android:textStyle="bold"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#878787"
            android:layout_weight="1"
            android:padding="12dp"
            android:textStyle="bold"
            android:text="@string/other_apps"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:src="@drawable/apps"
            android:layout_marginRight="48dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:onClick="ClickShareLink"
        android:textStyle="bold"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#878787"
            android:layout_weight="1"
            android:padding="12dp"
            android:textStyle="bold"
            android:text="@string/share_link"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:src="@drawable/share"
            android:layout_marginRight="48dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#636363" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#767676"
        android:textStyle="bold"
        android:text="Help"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp" />


    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:onClick="ClickFeedback"
        android:textStyle="bold"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#878787"
            android:layout_weight="1"
            android:padding="12dp"
            android:textStyle="bold"
            android:text="@string/feedback"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:src="@drawable/feedback"
            android:layout_marginRight="48dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:onClick="ClickDeveloper"
        android:textStyle="bold"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#878787"
            android:layout_weight="1"
            android:padding="12dp"
            android:textStyle="bold"
            android:text="@string/developer"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_person"
            android:layout_marginRight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:onClick="ClickPrivacyPolicy"
        android:textStyle="bold"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#878787"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:textStyle="bold"
            android:text="Privacy Policy"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_privacy_policy"
            android:layout_marginRight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:onClick="ClickLogout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:textColor="#D32F2F"
            android:padding="12dp"
            android:textStyle="bold"
            android:text="Exit"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_exit"
            android:layout_marginRight="48dp" />
    </LinearLayout>


</LinearLayout>
